# CS360

./: CMakeLists.txt  Main.c  README.md  a.out  client.c  disk.c  disk.h  ialloc.c  imap.c  inode.c  main.c  mk  mydisk  oldT.c  queue.c  run  s.s  server.c  sh.c  solution  super.c  t.c  test  type.h
client/: somethingelse
help/: diskimage
