cmake_minimum_required(VERSION 3.9)
project(SHsimulator C ASM)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_C_COMPILER gcc)
set(CMAKE_C_FLAGS -m32)
set(CMAKE_CXX_COMPILER gcc)
set(CMAKE_CXX_FLAGS -m32)
set(CMAKE_ASM_FLAGS -m32)

add_executable(super super.c)
add_executable(imap imap.c)
add_executable(ialloc ialloc.c)
add_executable(inode inode.c)
add_executable(main main.c disk.c)